--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="scripts/engine.js"></script>
 	<script src="scripts/radio.js"></script>
     <script src="scripts/sounds.js"></script>
     <script src="scripts/sidebar.js"></script>
-    <script src="scripts/engine.js"></script>
+    <script src="scripts/alerts.js"></script>
     <script src="scripts/intro.js"></script>
     <script src="scripts/lanterna.js"></script>
 
@@ -14,10 +15,11 @@
 	<link rel="stylesheet" type="text/css" href="styles/ingame.css">
 	<link rel="stylesheet" type="text/css" href="styles/radio.css">
 	<link rel="stylesheet" type="text/css" href="styles/lanterna.css">
+	<link rel="stylesheet" type="text/css" href="styles/alert.css">	
 
 </head>
 <body>
-	
+	<div id="cursor"></div>
 	<div id="INTRO" class="intro">
 		<a id="introtitle">Konno Game</a>
 		<div id="introimg"></div>
@@ -29,15 +31,16 @@
 			<div class="cutscene" id="cstxt"></div>
 				<div class="cutscene" id="csvideo"></div>
 	</div>
-	<div class="ingame alert" id="alert">
+	
+
+	</div>
+	<div class="ingame" id="GAME" >
+		<div class="alert" id="alert"> 
 		<button id="alertclosebtn"></button>
 			<div id="alerttititle"></div>
 				<div id="alerttxt"></div>
 					<div id="alert"></div>
-
-	</div>
-	<div class="ingame" id="GAME" >
-		<div id="cursor"></div>
+		</div>
 		<div class="nav" id="navigation" >
 			
 			<button id="navclosebtn" onclick="closeNav()">X</button>
@@ -59,7 +62,8 @@
 
 					<button id="radiobtn">|||</button>
 			</div>
-			<div class="getRadio hoverable">Radio Emergencial</div>
+			<div class="getRadio hoverable" id="getRadio">Radio Emergencial</div>
+			<div class="getRadio hoverable" id="getAntena">Antena</div>
 					</div>
 	</div>
 
