--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	 <script src="scripts/events.js"></script>
 	<script src="scripts/engine.js"></script>
 	<script src="scripts/radio.js"></script>
     <script src="scripts/sounds.js"></script>
@@ -16,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/radio.css">
 	<link rel="stylesheet" type="text/css" href="styles/lanterna.css">
 	<link rel="stylesheet" type="text/css" href="styles/alert.css">	
+	<link rel="stylesheet" type="text/css" href="styles/events.css">
 
 </head>
 <body>
@@ -35,6 +37,15 @@
 
 	</div>
 	<div class="ingame" id="GAME" >
+		<div id="events" class="events nohoverable">
+			<div id="eventtitle"></div>
+			<div id="eventtxt"></div>
+			<button id="eventbtn1"></button>
+			<button id="eventbtn2"></button>
+		</div>
+		<div class="hud" id="hud">
+			<
+		</div>
 		<div class="alert" id="alert"> 
 		<button id="alertclosebtn"></button>
 			<div id="alerttititle"></div>
